--- a/styles/bulletin-board.css
+++ b/styles/bulletin-board.css
@@ -49,3 +49,24 @@
     right: 4px;
     font-size: 1.5em;
 }
+
+.post-it a {
+    display: grid;
+    gap: 0.5em;
+    height: 100%;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:active {
+    text-decoration: none;
+    cursor: pointer;
+}
