--- a/detail/style.css
+++ b/detail/style.css
@@ -1,4 +1,4 @@
-#bulletin-board {
+#post-it-detail {
     height: 100%;
     background-image: url(../assets/bulletin-bg.jpeg);
     border: 10px solid black;
@@ -48,4 +48,8 @@
     top: 4px;
     right: 4px;
     font-size: 1.5em;
+}
+
+.delete {
+    cursor: pointer;
 }
