--- a/profile/style.css
+++ b/profile/style.css
@@ -70,3 +70,71 @@ a:active {
     text-decoration: none;
     cursor: pointer;
 }
+
+#profile-form {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 1px 1px 5px -1px rgba(0, 0, 0, 0.65);
+}
+
+.form-input {
+    box-shadow: 1px 1px 5px -1px rgba(0, 0, 0, 0.65);
+}
+
+.form-button {
+    box-shadow: 1px 1px 5px -1px rgba(0, 0, 0, 0.65);
+}
+
+.form-button:hover {
+    cursor: pointer;
+}
+
+.form-button:active {
+    cursor: pointer;
+    transform: scale(.95);
+}
+
+#post-it-detail {
+    height: 100%;
+    background-image: url(../assets/bulletin-bg.jpeg);
+    border: 10px solid black;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    padding: 1em;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    gap: 1em;
+
+    overflow-y: scroll;
+}
+
+.profile {
+    height: 12em;
+    width: 13em;
+    padding: 0.75em;
+    color: #000;
+    background: #ffc;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    position: relative;
+
+    display: grid;
+    gap: 0.5em;
+    grid-template-rows: auto 1fr auto;
+}
+
+.profile:hover {
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.profile h2 {
+    font-weight: bold;
+}
+
+.profile p {
+    font-size: 0.9em;
+    overflow-y: auto;
+}
