--- a/profile/style.css
+++ b/profile/style.css
@@ -1,4 +1,4 @@
-#bulletin-board {
+main {
     height: 100%;
     background-image: url(../assets/bulletin-bg.jpeg);
     border: 10px solid black;
@@ -69,11 +69,16 @@ a:hover {
 a:active {
     text-decoration: none;
     cursor: pointer;
+    transform: scale(0.9);
 }
 
 #profile-form {
     display: flex;
     flex-direction: column;
+    background: url('../assets/white-notebook-paper.png');
+    background-position: center;
+    object-fit: cover;
+    background-repeat: no-repeat;
     box-shadow: 1px 1px 5px -1px rgba(0, 0, 0, 0.65);
 }
 
@@ -91,7 +96,7 @@ a:active {
 
 .form-button:active {
     cursor: pointer;
-    transform: scale(.95);
+    transform: scale(.98);
 }
 
 #post-it-detail {
@@ -137,4 +142,49 @@ a:active {
 .profile p {
     font-size: 0.9em;
     overflow-y: auto;
+}
+
+.form-label {}
+
+.form-input {
+
+    box-sizing: border-box;
+    box-shadow: 0px 14px 10px -8px rgb(0 0 0 / 50%);
+}
+
+.form-button {
+    background: #3D94F6;
+    border-radius: 50px;
+    color: #FFFFFF;
+    font-family: Verdana;
+    font-size: 1.5rem;
+    font-weight: 100;
+    box-shadow: inset -8px 12px 27px 0 #000000, 2px 5px 12px -6px #000000; 
+    text-shadow: 4px 4px 6px #000000;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    
+}
+
+.form-button:hover {
+    background: #1E62D0;
+    background-image: linear-gradient(top, #1E62D0, #3D94F6);
+    border-radius: 50px;
+    text-decoration: none;
+}
+
+.profile {
+    background: url(../assets/white-notebook-paper.png);
+    background-position: center;
+    object-fit: cover;
+}
+
+.name {
+
+}
+
+.bio {
+
 }
