add function to select all categories

--- a/styles/bulletin-board.css
+++ b/styles/bulletin-board.css
@@ -20,7 +20,7 @@
 }
 
 .cat-div {
-    display: contents;
+    display: flex;
     background-color: orangered;
     padding: 5px;
     margin: auto;
